`Config` - Create assets function

--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>Hello 2222</h2>
-<script src="../../../public/dist/pages/index.js"></script>
+
+<script src="<%= assets('dist/pages/index.js')%>"></script>
 </body>
-<%= xyz('abc') %>
 </html>
