--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -5,11 +5,33 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="<%= assets('lib/css/bootstrap.min.css')%>">
     <title>Document</title>
 </head>
 <body>
-    <h2>Hello 2222</h2>
+<div class="container">
+    <div style="display: flex; justify-content: center">
+        <h2>Subjects list</h2>
+    </div>
 
-<script src="<%= assets('dist/pages/index.js')%>"></script>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Subject name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% subjects.forEach((subject, index) => {%>
+        <tr>
+            <th scope="row"><%= index + 1 %></th>
+            <td><%= subject.name %></td>
+        </tr>
+        <%})%>
+        </tbody>
+    </table>
+</div>
+
+<script src="<%= assets('dist/pages/index.css')%>"></script>
 </body>
 </html>
