--- a/app/views/pages/login.ejs
+++ b/app/views/pages/login.ejs
@@ -1,5 +1,9 @@
 <%- include('../partials/head'); %>
 
+</head>
+
+<body>
+<!-- Content -->
 <div class="container-xxl">
     <div class="authentication-wrapper authentication-basic container-p-y">
         <div class="authentication-inner py-4">
@@ -113,3 +117,5 @@
     </div>
 </div>
 <%- include('../partials/script'); %>
+</body>
+</html>
