--- a/app/views/pages/admin/user/create.ejs
+++ b/app/views/pages/admin/user/create.ejs
@@ -107,10 +107,10 @@
                                             <hr class="mt-0" />
                                         </div>
                                         <div class="col-md-6">
-                                            <label class="form-label" for="formValidationName">Lastname <span style="color: red">*</span></label>
+                                            <label class="form-label" for="formValidationLastName">Lastname <span style="color: red">*</span></label>
                                             <input
                                                     type="text"
-                                                    id="formValidationName"
+                                                    id="formValidationLastName"
                                                     class="form-control"
                                                     placeholder="Nguyen"
                                                     name="lastName" />
