--- a/app/views/partials/script.ejs
+++ b/app/views/partials/script.ejs
@@ -26,3 +26,4 @@
 
 <!-- Page JS -->
 <script src="/static/assets/js/pages-auth.js"></script>
+<script src="/static/assets/js/activeMenu.js"></script>
