--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -12,7 +12,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Workflow</title>
+    <title>Process management</title>
 
     <meta name="description" content="" />
 
