--- a/app/views/pages/admin/user/create.ejs
+++ b/app/views/pages/admin/user/create.ejs
@@ -130,7 +130,7 @@
                                                     class="form-control typeahead"
                                                     type="text"
                                                     id="formValidationPhone"
-                                                    name="formValidationPhone"
+                                                    name="phone"
                                                     autocomplete="off" />
                                         </div>
 <!--                                        <div class="col-md-6">-->
@@ -161,7 +161,7 @@
                                                 <input
                                                         type="radio"
                                                         id="formValidationGender"
-                                                        name="formValidationGender"
+                                                        name="gender"
                                                         value="male"
                                                         class="form-check-input"
                                                         checked />
@@ -172,7 +172,7 @@
                                                 <input
                                                         type="radio"
                                                         id="formValidationGender2"
-                                                        name="formValidationGender"
+                                                        name="gender"
                                                         value="female"
                                                         class="form-check-input" />
                                                 <label class="form-check-label" for="formValidationGender2">Female</label>
@@ -183,7 +183,7 @@
                                             <input
                                                     type="text"
                                                     class="form-control flatpickr-validation"
-                                                    name="formValidationDob"
+                                                    name="DoB"
                                                     id="formValidationDob"
                                                     placeholder="dd/mm/yyyy"
                                                     required />
