--- a/app/views/pages/login.ejs
+++ b/app/views/pages/login.ejs
@@ -43,14 +43,14 @@
                         </a>
                     </div>
                     <!-- /Logo -->
-                    <form id="formAuthentication" class="mb-3" action="javascript:void(0)" method="POST">
+                    <form id="formAuthentication" class="mb-3" action="/action-login" method="post">
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email or Username</label>
+                            <label for="email" class="form-label">Username</label>
                             <input
                                     type="text"
                                     class="form-control"
                                     id="email"
-                                    name="email-username"
+                                    name="username"
                                     placeholder="Enter your email or username"
                                     autofocus />
                         </div>
