--- a/app/views/partials/script.ejs
+++ b/app/views/partials/script.ejs
@@ -13,6 +13,7 @@
 <script src="/static/assets/vendor/libs/i18n/i18n.js"></script>
 <script src="/static/assets/vendor/libs/typeahead-js/typeahead.js"></script>
 <script src="/static/assets/vendor/js/menu.js"></script>
+<script src="/static/assets/js/activeMenu.js"></script>
 
 <!-- endbuild -->
 
@@ -20,10 +21,20 @@
 <script src="/static/assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
 <script src="/static/assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
 <script src="/static/assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
+<script src="/static/assets/vendor/libs/moment/moment.js"></script>
+<script src="/static/assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script>
+<script src="/static/assets/vendor/libs/select2/select2.js"></script>
+<script src="/static/assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
+<script src="/static/assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
+<script src="/static/assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
+<script src="/static/assets/vendor/libs/@form-validation/umd/plugin-start-end-date/index.min.js"></script>
+<script src="/static/assets/vendor/libs/cleavejs/cleave.js"></script>
+<script src="/static/assets/vendor/libs/cleavejs/cleave-phone.js"></script>
 
 <!-- Main JS -->
 <script src="/static/assets/js/main.js"></script>
 
 <!-- Page JS -->
 <script src="/static/assets/js/pages-auth.js"></script>
-<script src="/static/assets/js/activeMenu.js"></script>
+<script src="/js/common/logout.js"></script>
+
