--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -17,7 +17,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="<%= assets('assets/img/favicon/favicon.ico') %>" />
+    <link rel="icon" type="image/x-icon" href="/static/assets/img/favicon/favicon.ico" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,22 +26,31 @@
             href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&ampdisplay=swap"
             rel="stylesheet" />
 
-    <!-- Icons -->
     <link rel="stylesheet" href="/static/assets/vendor/fonts/fontawesome.css" />
     <link rel="stylesheet" href="/static/assets/vendor/fonts/tabler-icons.css" />
     <link rel="stylesheet" href="/static/assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="/static/assets/vendor/css/rtl/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="/static/assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="/static/assets/vendor/css/rtl/core.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/css/rtl/theme-default.css" />
     <link rel="stylesheet" href="/static/assets/css/demo.css" />
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="/static/assets/vendor/libs/node-waves/node-waves.css" />
     <link rel="stylesheet" href="/static/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
     <link rel="stylesheet" href="/static/assets/vendor/libs/typeahead-js/typeahead.css" />
-    <!-- Vendor -->
+    <link rel="stylesheet" href="/static/assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/libs/datatables-buttons-bs5/buttons.bootstrap5.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/libs/select2/select2.css" />
     <link rel="stylesheet" href="/static/assets/vendor/libs/@form-validation/umd/styles/index.min.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/libs/select2/select2.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/libs/flatpickr/flatpickr.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/libs/quill/editor.css" />
+    <link rel="stylesheet" href="/static/assets/vendor/libs/dropzone/dropzone.css" />
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css" rel="stylesheet">
+
+    <!-- Vendor -->
 
     <!-- Page CSS -->
     <!-- Page -->
@@ -50,7 +59,5 @@
     <!-- Helpers -->
     <script src="/static/assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="/static/assets/vendor/js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="/static/assets/js/config.js"></script>
