--- a/app/views/pages/admin/form/create.ejs
+++ b/app/views/pages/admin/form/create.ejs
@@ -26,13 +26,23 @@
                 <!-- Content -->
 
                 <div class="container-xxl flex-grow-1 container-p-y">
-                    <h4 class="py-3 mb-4"><span class="text-muted fw-light">Người dùng /</span> Tạo người dùng</h4>
+                    <h4 class="py-3 mb-4"><span class="text-muted fw-light">Admin /</span> Create form</h4>
                     <div class="row">
                         <!-- FormValidation -->
                         <div class="col-12">
-                            <form action="" name="createForm">
+                            <form action="/admin/form/action-create" name="createForm" method="post">
                                 <div class="card">
                                     <h5 class="card-header">Create form</h5>
+                                    <div class="col-md-6">
+                                        <label class="form-label" for="formValidationUsername">Title <span style="color: red">*</span></label>
+                                        <input
+                                                class="form-control"
+                                                type="text"
+                                                id="formValidationUsername"
+                                                name="title"
+                                                placeholder="title" />
+                                    </div>
+
                                     <textarea hidden="" name="data" id="" cols="30" rows="10"></textarea>
                                     <div class="card-body">
                                         <div id="fb-editor"></div>
@@ -81,7 +91,7 @@
         $('.btn-save').on('click', function () {
             var result = formBuilder.actions.getData('json')
             $form.find('textarea[name="data"]').val(result);
-            // $form.submit();
+            $form.submit();
         })
     });
 </script>
