--- a/app/views/components/menu.ejs
+++ b/app/views/components/menu.ejs
@@ -45,9 +45,15 @@
             <span class="menu-header-text">Users</span>
         </li>
         <li class="menu-item user-menu">
-            <a href="/user/list" class="menu-link">
+            <a href="/admin/user/list" class="menu-link">
                 <i class="menu-icon tf-icons ti ti ti-users"></i>
                 <div data-i18n="Users">Users</div>
+            </a>
+        </li>
+        <li class="menu-item form-menu">
+            <a href="/admin/form/list" class="menu-link">
+                <i class="menu-icon tf-icons ti ti ti-forms"></i>
+                <div data-i18n="Forms">Forms</div>
             </a>
         </li>
     </ul>
