--- a/app/views/pages/admin/form/create.ejs
+++ b/app/views/pages/admin/form/create.ejs
@@ -33,18 +33,19 @@
                             <form action="/admin/form/action-create" name="createForm" method="post">
                                 <div class="card">
                                     <h5 class="card-header">Create form</h5>
-                                    <div class="col-md-6">
-                                        <label class="form-label" for="formValidationUsername">Title <span style="color: red">*</span></label>
-                                        <input
-                                                class="form-control"
-                                                type="text"
-                                                id="formValidationUsername"
-                                                name="title"
-                                                placeholder="title" />
-                                    </div>
-
-                                    <textarea hidden="" name="data" id="" cols="30" rows="10"></textarea>
                                     <div class="card-body">
+                                        <div class="col-md-6">
+                                            <label class="form-label" for="formValidationUsername">Title <span style="color: red">*</span></label>
+                                            <input
+                                                    class="form-control"
+                                                    type="text"
+                                                    id="formValidationUsername"
+                                                    name="title"
+                                                    placeholder="title" />
+                                        </div>
+                                        <div class="col-md-6 mt-2">
+                                            <textarea hidden="" name="data" id="" cols="30" rows="10"></textarea>
+                                        </div>
                                         <div id="fb-editor"></div>
                                         <div class="mt-2">
                                             <button type="button" class="btn btn-primary me-2 btn-save">Save</button>
