--- a/app/views/pages/admin/form/list.ejs
+++ b/app/views/pages/admin/form/list.ejs
@@ -95,7 +95,7 @@
                     <div class="card">
                         <div class="card-datatable table-responsive pt-0">
                             <span>
-                                <a href="/admin/user/create">
+                                <a href="/admin/form/create">
                                     <button class="btn btn-primary" style="margin: 15px">Tạo form</button>
                                 </a>
                             </span>
