--- a/app/views/components/nav.ejs
+++ b/app/views/components/nav.ejs
@@ -59,6 +59,12 @@
                         </a>
                     </li>
                     <li>
+                        <a class="dropdown-item" href="/admin/user/list">
+                            <i class="ti ti-user-check me-2 ti-sm"></i>
+                            <span class="align-middle">Admin</span>
+                        </a>
+                    </li>
+                    <li>
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
